k8s-configs/cluster-tools/base/ingress/nginx/base/ingress-toleration.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  template:
    spec:
     tolerations:
       - key: "pingidentity.com/non-consolidating"
         operator: "Equal"
         value: "true"
         effect: "NoSchedule"
